0.8.2	UNELEASED

0.8.1	2011-10-31

 FEATURES

  * Repo.do_commit has a new argument 'ref'.

  * Repo.do_commit has a new argument 'merge_heads'. (Jelmer Vernooij)

  * New ``Repo.get_walker`` method. (Jelmer Vernooij)

  * New ``Repo.clone`` method. (Jelmer Vernooij, #725369)

  * ``GitClient.send_pack`` now supports the 'side-band-64k' capability.
    (Jelmer Vernooij)

  * ``HttpGitClient`` which supports the smart server protocol over
    HTTP. "dumb" access is not yet supported. (Jelmer Vernooij, #373688)

  * Add basic support for alternates. (Jelmer Vernooij, #810429)

 CHANGES

  * unittest2 or python >= 2.7 is now required for the testsuite.
    testtools is no longer supported. (Jelmer Vernooij, #830713)

 BUG FIXES

  * Fix compilation with older versions of MSVC.  (Martin gz)

  * Special case 'refs/stash' as a valid ref. (Jelmer Vernooij, #695577)

  * Smart protocol clients can now change refs even if they are
    not uploading new data. (Jelmer Vernooij, #855993)

 * Don't compile C extensions when running in pypy.
   (Ronny Pfannschmidt, #881546)

 * Use different name for strnlen replacement function to avoid clashing
   with system strnlen. (Jelmer Vernooij, #880362)

 API CHANGES

  * ``Repo.revision_history`` is now deprecated in favor of ``Repo.get_walker``.
    (Jelmer Vernooij)

0.8.0	2011-08-07

 FEATURES

  * New DeltaChainIterator abstract class for quickly iterating all objects in
    a pack, with implementations for pack indexing and inflation.
    (Dave Borowitz)

  * New walk module with a Walker class for customizable commit walking.
    (Dave Borowitz)

  * New tree_changes_for_merge function in diff_tree. (Dave Borowitz)

  * Easy rename detection in RenameDetector even without find_copies_harder.
    (Dave Borowitz)

 BUG FIXES

  * Avoid storing all objects in memory when writing pack.
    (Jelmer Vernooij, #813268)

  * Support IPv6 for git:// connections. (Jelmer Vernooij, #801543)
